# systematic-execution-os

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  vision.md
.github/workflows/: ci.yml
agent/: __init__.py  agent_setup.py  config.py  main.py  system_prompt.py
agent/tools/: __init__.py  _http.py  decisions.py  health.py  milestones.py  pm_coverage.py  pm_needs.py  projects.py  reports.py  risks.py
alembic/: env.py
alembic/versions/: 4855b9c370d3_initial_schema.py
docs/: api-design.md  architecture.md  asana-mapping.md  design-decisions.md  design-review.md  domain-model.md  domain-models.md  future-roadmap.md  testing.md  workflows.md
scripts/: backfill_sync.py  seed_config.py  smoke_test.py  test_webhooks.py
sidecar/: __init__.py  __main__.py  cli.py  config.py  database.py  main.py
sidecar/api/: __init__.py  capabilities.py  decisions.py  deps.py  milestones.py  operating_review.py  pm_coverage.py  pm_needs.py  projects.py  reports.py  risks.py  router.py  webhooks.py
sidecar/automation/: __init__.py  daily_digest.py  milestone_watch.py  pm_health_watch.py  scheduler.py  templates.py  weekly_review_prep.py
sidecar/db/: __init__.py  base.py  capability.py  decision.py  milestone.py  pm_coverage.py  pm_need.py  project.py  risk.py
sidecar/integrations/: __init__.py  asana_client.py  asana_sync.py  asana_webhooks.py
sidecar/models/: __init__.py  capability.py  common.py  decision.py  deliverable.py  milestone.py  pm_coverage.py  pm_need.py  project.py  risk.py  (+1 more)
tests/: conftest.py
(+47 files in other folders)
