[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bam-sidecar"
version = "0.1.0"
description = "BAM Systematic Execution OS — Python sidecar service"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Data / validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    # Migrations
    "alembic>=1.13.0",
    # HTTP client
    "httpx>=0.27.0",
    # Background jobs
    "apscheduler>=3.10.0",
    # Logging
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",     # for TestClient
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["sidecar"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=sidecar --cov-report=term-missing --cov-report=html"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["sidecar"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
